fix footer spacing, update menu links, fix social links

--- a/client/styles/global.import.less
+++ b/client/styles/global.import.less
@@ -220,6 +220,7 @@ nav.nav a.logo {
 }
 
 #footerContainer {
+  padding: 10px;
   width: 100%;
   background: darken(@brand, 33%);
   color: white;
